# ndel

./: .gitignore  Dockerfile  LICENSE  README.md  ndel.py  pyproject.toml  setup.py
doc/: fuzzy-resolution.md  langdef.md
docs/: bootstrap_ndel_config_prompt.md  cookbook_churn_pipeline.md  cookbook_ci_integration.md  cookbook_custom_feature_store_detector.md  examples.md  llm_integration.md  mcp_server.md  overview.md  philosophy.md
examples/: how_to_use_ndel.py  python_churn_pipeline.ndel.txt  python_churn_pipeline.py  python_feature_store_pipeline.ndel.txt  python_feature_store_pipeline.py  sql_user_sessions.ndel.txt  sql_user_sessions.sql
ndel/: __init__.py  index.py  lineage.py  llm_renderer.py  mcp_server.py  prompt.py  py_analyzer.py  render.py  serialization.py  validation.py
src/: __init__.py  analysis.py  analyzer.py  analyzers.py  api.py  composer.py  describe.py  formatter.py  index.py  inspector.py  language.py  llm.py  llmrenderer.py  mcp_server.py  mcpserver.py  pipeline.py  prompt.py  python_analyzer.py  render.py  schema.py  server.py  sqlanalyzer.py  types.py
tests/: conftest.py  test_abstraction_levels.py  test_analyzers_sql.py  test_api_describe.py  test_capabilities.py  test_cli.py  test_custom_detectors.py  test_diff.py  test_features.py  test_ir_validation.py  test_lineage.py  test_llm_prompt_and_privacy.py  test_llm_renderer.py  test_mcp_health.py  test_mcp_server.py  test_metrics.py  test_parser.py  test_privacy.py  test_privacy_and_schema.py  test_py_analyzer.py  test_render.py  test_serialization.py  test_sklearn_pipelines.py  (+4 more)
(+71 files in other folders)
