[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndel"
version = "0.2.0"
description = "Non-Deterministic Expression Language - A language for expressing queries with fuzzy predicates"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "NDEL Contributors" }
]
keywords = ["expression-language", "parser", "fuzzy-logic", "query-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "sqlglot>=21.0.0",
]

[project.scripts]
ndel-mcp = "ndel.index:main"


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ndel"
Documentation = "https://github.com/yourusername/ndel#readme"
Repository = "https://github.com/yourusername/ndel"

[tool.hatch.build.targets.wheel]
packages = ["src", "ndel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
